--- a/modules/mod_admin/lib/less/form.less
+++ b/modules/mod_admin/lib/less/form.less
@@ -40,8 +40,10 @@ form.form-horizontal .z_validation_message {
     margin-bottom: 0;
 }
 
-textarea, input {
+textarea,
+input {
     &.form-field-error {
         background: #ffeeee;
     }
 }
+
