--- a/modules/mod_admin/lib/less/base.less
+++ b/modules/mod_admin/lib/less/base.less
@@ -1,4 +1,5 @@
 body {
+    color: @textColorDark;
     
     div.admin-container {
         margin: @baseMargin;
@@ -17,6 +18,12 @@ body {
     }
 }
 
+@media (max-width: @breakpointMediumMaxWidth) {
+    body > div.container-fluid {
+        margin-top: 0;
+    }
+}
+
 hr {
     background-color: #ddd;
     border-top-color: #d0d0d0;
@@ -24,12 +31,14 @@ hr {
     width: 100%;
 }
 
+// extensible
+
 .admin-image-border {
     border: 1px solid #fff;
 }
-
-@media (max-width: @breakpointMediumMaxWidth) {
-    body > div.container-fluid {
-        margin-top: 0;
-    }
+.admin-text-header {
+    font-size: 13px;
+    text-shadow: @darkOnLightTextShadow;
+    color: @textColorMedium;
 }
+
