--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -15,7 +15,8 @@
 @backgroundColorInteractive: #eee;
 @borderColorMedium: #ddd;
 @borderColorLight: #eee;
-@textColorMedium: #666;
+@textColorDark: #222;
+@textColorMedium: #777;
 @textColorMuted: #999;
 
 // colors in context
