--- a/modules/mod_admin/lib/less/modal.less
+++ b/modules/mod_admin/lib/less/modal.less
@@ -11,4 +11,9 @@ div.modal {
     .nav.nav-pills {
         margin-bottom: @baseMargin;
     }
+    .modal-footer {
+        .pull-left {
+            margin-left: 0;
+        }
+    }
 }
