--- a/modules/mod_admin/lib/less/tinymce.less
+++ b/modules/mod_admin/lib/less/tinymce.less
@@ -34,7 +34,7 @@ table.mceLayout, textarea.tinyMCE {
 
 div.widget-content .mce-tinymce.mce-container {
     border: 0;
-    margin: 0 -4px -8px -4px; /* makes it fill the whole widget-content area */
+    margin: 0 -4px 0 -4px; /* makes it fill the whole widget-content area */
 }
 
 /* sets tinyMCE font size in admin */
