--- a/modules/mod_admin/lib/less/tree-list.less
+++ b/modules/mod_admin/lib/less/tree-list.less
@@ -41,7 +41,9 @@ ul.tree-list {
     }
     &.categories {
         padding-bottom: 40px;
-    
+    }
+    &.categories,
+    &.tree-list-menu {
         li.menu-item {
             span.category {
                 display: none;
