--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -2,19 +2,28 @@
 @baseMargin: 15px;
 @thumbImageWidth: 80px;
 @thumbImageHeight: 60px;
-@radiusBlockElement: 4px;
+@radiusBlockElement: 0px;
 @radiusWidget: @radiusBlockElement;
+@closeBtnSize: 21px;
+@widgetSidePadding: 10px;
+@widgetVerticalPadding: 9px;
 
 // responsive
 @breakpointMediumMaxWidth: 979px;
 
 // general colors
 @zotonicBlue: #02A7E6;
+@warningColor: #E4522A;
+
 @backgroundColorLight: #eee;
 @backgroundColorLighter: #f2f2f2;
+@backgroundColorLightest: #f6f6f6;
 @backgroundColorInteractive: #eee;
+@backgroundDragPlaceholder: #ddd;
+
 @borderColorMedium: #ddd;
 @borderColorLight: #eee;
+
 @textColorDark: #222;
 @textColorMedium: #777;
 @textColorMuted: #999;
@@ -27,3 +36,6 @@
 // text shadow
 @darkOnLightTextShadow: ~"0 1px 0 rgba(255,255,255,.5)";
 @lightOnDarkTextShadow: ~"0 1px 0 rgba(0,0,0,.1)";
+
+// box shadow
+@boxShadow: ~"0 0 4px rgba(0,0,0,.125)";
