--- a/modules/mod_admin/lib/less/edit-blocks.less
+++ b/modules/mod_admin/lib/less/edit-blocks.less
@@ -1,51 +1,49 @@
-ul.blocks {
+.block-add-block {
+    margin: 0 0 9px 0;
+    
+    .dropdown-menu {
+        top: auto;
+    }
+}
+
+ul.blocks.ui-sortable {
     padding: 0;
     margin: 0;
-}
-ul.blocks > li {
-    list-style-type: none;
-    margin-left: 0;
-}
-ul.blocks > li > h3 {
-    cursor: move;
-}
-ul.blocks > li > h3 > .icon-remove,
-ul.blocks > li > h3 > .pull-right {
-    cursor: pointer;
-}
-ul.blocks > li > h3 > .pull-right {
-    margin-top: 6px;
-}
-ul.blocks > li > h3 > input {
-    margin: 2px 0 3px 0;
-    height: 24px;
-    width: 120px;
-    display: inline;
-}
-ul.blocks li.block .widget {
-    padding-top: 4px;
-    #3L > .border-radius(0 0 @radiusWidget @radiusWidget);
-}
-.block-add-block {
-    margin-bottom: 12px;
-}
-.block-add-block .dropdown-menu {
-    top: auto;
-}
 
-fieldset.block-name {
-    margin-top: 8px;
-}
+    > li {
+        list-style-type: none;
+        margin-left: 0;
+    }
 
-h3.widget-header input.block-name {
-    background: #ddd;
-}
-h3.widget-header input.block-name:focus {
-    background: white;
-}
+    .ui-sortable-placeholder {
+        &:extend(.z-drag-drop-placeholder);
+    }
+    
+    .widget-header {
+        position: relative;
+        cursor: move;
+        
+        &:before {
+            width: 16px;
+            height: 16px;
+            display: block;
+            .icon-move;
+            top: 2px;
+        }
 
-ul.blocks .ui-sortable-placeholder {
-    background: #aaa;
-    #3L > .border-radius(@radiusBlockElement);
-    visibility: visible !important;
+        .z-close-btn {
+            position: absolute;
+            top: @widgetVerticalPadding - 2;
+            right: @widgetSidePadding + 22; // make room for minify button
+            z-index: 1;
+        }
+    }
+    .form-control.block-name {
+        background-color: transparent;
+        margin: -@widgetVerticalPadding 0 10px 0;
+        
+        &:focus {
+            background-color: #fff;
+        }
+    }
 }
