--- a/modules/mod_admin/lib/less/edit.less
+++ b/modules/mod_admin/lib/less/edit.less
@@ -17,49 +17,63 @@ p.admin-chapeau {
 }
 
 ul.media {
+    @_item_spacing: 10px;
     margin: 0;
-
+    
     > li {
-        margin: 0 0 18px 3px;
+        @_padding: 5px;
+        @_image_width: 180px; // set in mediaclass.config
+        @_image_height: 180px; // set in mediaclass.config
+        @_width: @_image_width + 2 * @_padding + 2; // add border
+        @_height: @_image_height + 2 * @_padding + 2 + 30;
+        
+        margin: 0 @_item_spacing @_item_spacing 0;
         background: #fff;
-        width: 25%;
-        height: 230px;
-        max-width: 200px;
+        width: @_width;
+        height: @_height;
         float: left;
-        margin-left: 10px;
         position: relative;
-        padding: 4px;
+        padding: @_padding;
         border: 1px solid #ddd;
         #3L > .border-radius(@radiusBlockElement);
-        -webkit-box-shadow: 0 0 4px rgba(0,0,0,.125);
+        #3L > .box-shadow(none);
+        
+        &.sortable {
+            cursor: move;
+        }
         
         img {
-            cursor: move;
-            width: 100%;
+            .center(@_padding);
+            bottom: auto; // align to top
+        }
+        .z-close-btn {
+            position: absolute;
+            top: 0;
+            right: 0;
         }
         .bottom {
             position: absolute;
-            bottom: 0;
-            left: 0; right: 0;
-            padding: 2px;
+            bottom: @_padding;
+            left: @_padding;
+            right: @_padding;
             
             .caption {
-                height: 22px;
-                padding-left: 4px;
-                line-height: 1.6;
+                height: @closeBtnSize;
                 overflow: hidden;
+                
                 a {
                     word-break: break-all;
                     display: inline-block;
-                    width: 85%;
+                    height: @closeBtnSize;
+                    line-height: @closeBtnSize;
+                    width: @_image_width - @closeBtnSize - 3;
                 }
             }
         }
     }
 
     > li.ui-sortable-placeholder {
-        background: #aaa;
-        #3L > .border-radius(@radiusBlockElement);
+        &:extend(.z-drag-drop-placeholder);
     }
 }
 
