--- a/modules/mod_admin/lib/less/zotonic-admin.less
+++ b/modules/mod_admin/lib/less/zotonic-admin.less
@@ -24,11 +24,11 @@ limitations under the License.
 @import "base.less";
 @import "bootstrap-overrides.less";
 @import "connections-list.less";
-@import "dialog-connect.less";
 @import "edit-blocks.less";
 @import "edit-media.less";
 @import "edit.less";
 @import "form.less";
+@import "icon.less";
 @import "image.less";
 @import "logon.less";
 @import "map.less";
@@ -38,10 +38,9 @@ limitations under the License.
 @import "status-leds.less";
 @import "suggestions-list.less";
 @import "table.less";
+@import "thumbnails.less";
 @import "tinymce.less";
 @import "tree-list.less";
 @import "widget.less";
 @import "z-notice.less";
-
-
 
