admin: multiple css fixes forms and edit blocks

--- a/modules/mod_admin/lib/less/image.less
+++ b/modules/mod_admin/lib/less/image.less
@@ -21,7 +21,7 @@ ul.tree-list {
 img.admin-list-overview {
     width: @thumbImageWidth;
     height: @thumbImageHeight;
-    &:extend(.admin-image-border);
+    border: none;
 }
 
 /* small image in admin edit */
