--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -38,6 +38,10 @@
             margin-bottom: 0;
         }
         
+        &.tab-content {
+            padding-top: 10px;
+        }
+
         .form-group:last-child {
             padding-bottom: @widgetVerticalPadding;
             margin-bottom: 0;
