mod_admin: more horizontal forms

--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -927,7 +927,7 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
   font-weight: normal;
 }
 .widget .widget-section-header {
-  margin: 30px 0 15px 0;
+  margin: 30px 0 0 0;
 }
 .widget .widget-header {
   margin: 0;
