--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -67,7 +67,7 @@
     }
     
     .widget-section-header {
-        margin: 30px 0 15px 0;
+        margin: 20px 0 0 0;
     }
     
     .widget-header {
