--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -27,7 +27,7 @@
 @textColorDark: #222;
 @textColorMedium: #777;
 @textColorMuted: #999;
-@textColorLight: #aaa;
+@textColorLight: #bbb;
 
 // colors in context
 @backgroundColorRowHover: @backgroundColorInteractive;
