admin: minimal design of help buttons

--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -90,6 +90,11 @@ ul.media > li.ui-sortable-placeholder {
 .z-text-light {
   color: #bbbbbb;
 }
+.z-btn-help {
+  display: inline-block;
+  font-size: 16px;
+  padding: 1px;
+}
 .admin-image-border,
 div.admin-edit-media,
 img.admin-list-dashboard,
