--- a/modules/mod_admin/lib/less/base.less
+++ b/modules/mod_admin/lib/less/base.less
@@ -76,6 +76,12 @@ hr {
     color: @textColorLight;
 }
 
+.z-btn-help {
+    display: inline-block;
+    font-size: 16px;
+    padding: 1px;
+}
+
 // extensible
 
 .admin-image-border {
