--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -31,7 +31,7 @@
 
 // colors in context
 @backgroundColorRowHover: @backgroundColorInteractive;
-@textColorUnpublished: @textColorMuted;
+@textColorUnpublished: @textColorLight;
 @borderColorRow: @borderColorMedium;
 
 // text shadow
